# conplay

./: .gitignore  CMakeLists.txt  README.md
include/: clipp.h  stdcpp.h
src/: main.cpp
